Modifiche suggerite da Lint